committing further changes to navbar, fixed issue where the icons were misaligned, and also made it responsive for mobile where it displays at the bottom of the page

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
+:root {
+    font-size: 16px;
+}
+
 main{
-    margin-left: 6.5vw;
-    margin-right: 6.5vw;
+    margin-left: 5rem;
 }
